deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: cc-assignment6-deployment
  labels:
    app: cc-assignment6
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: cc-assignment6
  template:
    metadata:
      labels:
        app: cc-assignment6
    spec:
      containers:
      - name: assignment6-1
        image: gcr.io/cc-assignment6/assignment6
        ports:
        - containerPort: 5000
